# Krol-X-NiceMusicLibrary

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker.yml  test.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_mood_chain_transitions.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py  mood_chains.py  playlists.py  recommendations.py  search.py  songs.py  stats.py  tags.py
backend/app/core/: config.py
backend/app/db/: base.py  seeds.py  session.py
backend/app/models/: __init__.py  base.py  listening_history.py  mood_chain.py  playlist.py  song.py  tag.py  user.py
backend/app/schemas/: mood_chain.py  playlist.py  recommendation.py  stats.py  tag.py
backend/app/services/: cache.py  metadata.py  mood_chain.py  playlist.py  recommendation.py  stats.py  storage.py  tag.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_mood_chains.py  test_playlists.py  test_recommendations.py  test_songs.py  test_stats.py  test_tags.py
docs/: 01-architecture.md  01-architecture.yaml  02-entities.md  02-entities.yaml  03-api.md  03-api.yaml  04-user-stories.md  04-user-stories.yaml  05-interface.md  05-interface.yaml  06-project-plan.md  06-project-plan.yaml
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/__tests__/: App.spec.ts
frontend/src/assets/: main.css
frontend/src/composables/: index.ts  useApi.ts  useKeyboard.ts
frontend/src/pages/: HomeView.vue  LibraryView.vue  LoginView.vue  MoodChainView.vue  MoodChainsView.vue  NotFoundView.vue  PlaylistView.vue  PlaylistsView.vue  RegisterView.vue  SettingsView.vue  StatsView.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  moodChains.ts  songs.ts  stats.ts
frontend/src/stores/: auth.ts  index.ts  library.ts  moodChain.ts  player.ts  playlist.ts  stats.ts  tag.ts  ui.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue
(+58 files in other folders)
